--- a/LangChain/LangChain_Agent.ipynb
+++ b/LangChain/LangChain_Agent.ipynb
@@ -15,6 +15,26 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Kong Gateway 3.10 / Langchain agent\n",
+        "\n",
+        "This notebook demonstrates how to use the AI Proxy plugin with Langchain agents.\n",
+        "\n",
+        "## Prerequisites\n",
+        "\n",
+        "Before running the notebook, ensure you have the following:\n",
+        "\n",
+        "1. **Kong API Gateway running**: You will need a running instance of Kong API Gateway\n",
+        "2. **AI Proxy plugin configured**: An example is provided in this repo in the form of a deck dump.\n",
+        "3. **A [Tavily](https://tavily.com/) key** (free tier available). This is used to allow web searches for updated information.\n",
+        "This can either be entered interactively or added to the notebook secrets."
+      ],
+      "metadata": {
+        "id": "CkNNE3A1xCJu"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -40,7 +60,7 @@
       "metadata": {
         "id": "X-vBnnruMUdC"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -51,7 +71,7 @@
       "metadata": {
         "id": "GcWlvbbFP8qi"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -62,7 +82,7 @@
       "metadata": {
         "id": "ktvGrMT0NHAT"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -76,7 +96,7 @@
       "metadata": {
         "id": "PJBzg8-BNJj4"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -88,7 +108,7 @@
       "metadata": {
         "id": "cmVLzhIJNTf_"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -108,7 +128,7 @@
       "metadata": {
         "id": "8LmiaYHROdVk"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -119,7 +139,7 @@
       "metadata": {
         "id": "LZ3Rd8UaOhhp"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -130,7 +150,7 @@
       "metadata": {
         "id": "dWylRfa-NX-C"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -145,7 +165,7 @@
       "metadata": {
         "id": "5O8ftSkcOmCk"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -168,7 +188,7 @@
       "metadata": {
         "id": "FyYzbbwDOneo"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -179,7 +199,7 @@
       "metadata": {
         "id": "CEHoWEMEOpVj"
       },
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -191,7 +211,7 @@
       "metadata": {
         "id": "G0YnMwdqOq_f"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
